# CorteXia

./: .env.example  .gitignore  ARCHITECTURE.md  BUG_FIXES_APPLIED.md  BUILD_COMPLETE.md  COMPLETE_BUILD_PROMPT.md  FEATURES_CHECKLIST.md  FIXES_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  cortexia.code-workspace  package.json  pnpm-lock.yaml  prompt.txt  render.yaml
api/: .env.example  index.ts  package-lock.json  package.json
api/routes/: ai.ts  habits.ts  journal.ts
api/services/: ai-service.ts
app/: globals.css  layout.tsx  page.old.tsx  page.tsx
app/ai-coach/: page.tsx
app/day-planner/: page.old2.tsx  page.tsx
app/finance/: page.old.tsx  page.tsx
app/goals/: page.tsx
app/habits/: page.tsx
app/insights/: page-enhanced.tsx  page.tsx
app/journal/: page-enhanced.tsx  page.old.tsx  page.old2.tsx  page.tsx
app/settings/: page.tsx
app/study/: page-enhanced.tsx  page.tsx
app/tasks/: page.old.tsx  page.tsx
app/time/: page.tsx
app/time-tracker/: page.tsx
backend/: .env.example  drizzle.config.ts  index.ts  package-lock.json  package.json
backend/db/: client.ts  schema.ts
backend/routes/: ai.ts  (+7 more)
frontend/: .env.example  .env.local.example  package-lock.json  package.json  vercel.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
hooks/: use-finance.ts  use-goals.ts
lib/: api-client.ts  api.ts  relationships.ts  types.ts
supabase/: migration.sql
types/: goal.ts
(+143 files in other folders)
